--- a/package.json
+++ b/package.json
@@ -6,6 +6,19 @@
     "type": "git",
     "url": "git+https://github.com/qpixel/pixel-ui.git"
   },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/types/index.d.ts",
+  "typings": "dist/types/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "babel src --ignore src/**/*-stories.tsx --extensions .ts,.tsx -d dist --source-maps",
+    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
   "author": "QPixel",
   "license": "MIT",
   "bugs": {
@@ -13,15 +26,31 @@
   },
   "homepage": "https://github.com/qpixel/pixel-ui#readme",
   "devDependencies": {
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/runtime": "^7.15.4",
+    "@emotion/jest": "^11.3.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/cli": "^6.3.8",
+    "@storybook/react": "^6.3.8",
+    "@types/react": "^17.0.20",
+    "babel-loader": "^8.2.2",
     "react": "^17.0.2",
-    "twin.macro": "^2.7.0"
+    "react-dom": "^17.0.2",
+    "twin.macro": "^2.7.0",
+    "typescript": "^4.4.3"
   },
   "peerDependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "react": "^17.0.2",
+    "@types/react": "^17.0.20",
     "twin.macro": "^2.7.0"
   }
 }
